--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</ol>
 		<h2>EXPERT TIPS</h2>
 
-		<blockquote><p>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!</p></blockquote>
+		<blockquote>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!</blockquote>
 
 		<p>Got questions? Our experts have the answers. <a href="mailto:sejal581@gmail.com">Email Me</a></p>
 
